Replace loggers declaration for lombok annotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 # Neo4j setup
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=InHistory
+
+# Logging setup
+logging.level.com.renangmarques.inhistory=DEBUG
